change html msg

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <!-- <link rel="stylesheet" type="text/css" href="./css/style.css"> -->
   </head>
   <body>
-    <h1>No URL</h1>
+    <h1>Hello World from reverse proxy PC</h1>
   </body>
 </html>
